added navbar sass

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <!-- navbar -->
-  <nav class="">
-    <div class="">
-      <h1 class=""><img src="/assets/images/Logo - trendz.png" alt="" class=""></h1>
-      <ul class="">
-        <li class=""><a href="#work" class="">login</a></li>
-        <li class=""><a href="#about" class="">sign up</a></li>
+  <nav class="navbar">
+    <div class="container">
+      <h1 class="logo"><img src="/assets/images/Logo - trendz.png" alt="" class="logo br-full"></h1>
+      <ul class="display-f">
+        <li class="ml-1"><a href="#work" class="">login</a></li>
+        <li class="ml-1"><a href="#about" class="">sign up</a></li>
       </ul>
     </div>
   </nav>
