added intro sass

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
   <!-- navbar -->
-  <nav class="navbar">
+  <nav class="navbar position-f bg-white">
     <div class="container">
-      <h1 class="logo"><img src="/assets/images/Logo - trendz.png" alt="" class="logo br-full"></h1>
+      <h1 class="logo"><img src="" alt="" class="logo br-full bg-gray-light-9"></h1>
       <ul class="display-f">
-        <li class="ml-1"><a href="#work" class="">login</a></li>
-        <li class="ml-1"><a href="#about" class="">sign up</a></li>
+        <li class="ml-1 text-primary text-hover-secondary"><a href="#work" class="">login</a></li>
+        <li class="ml-1 text-primary text-hover-secondary"><a href="#about" class="">sign up</a></li>
       </ul>
     </div>
   </nav>
   <!-- intro -->
-  <div class="">
-    <div class="">
-      <div class="">
+  <div class="container pt-5 pb-5">
+    <div class="row justify-center">
+      <div class="col-12-xs col-5-md">
         <h2>
-          <div class="">trendz</div>
-          <div class="">Where the market meets the next generation.</div>
+          <div class="font-xxl text-primary">trendz</div>
+          <div class="font-xxs text-secondary">Where the market meets the next generation.</div>
         </h2>
-        <p class="">Learn stocks. Decode trends. Build your money mindset.</p>
-        <a href="#start" class="">Start Learning</a>
-        <a href="#watch" class="">Watch Demo</a>
+        <p class="text-gray mt-2 mb-3">Learn stocks. Decode trends. Build your money mindset.</p>
+        <a href="#start" class="btn-secondary text-white text-hover-primary">Start Learning</a>
+        <a href="#watch" class="ml-2 text-gray text-hover-primary">Watch Demo</a>
       </div>
-      <div class="">
+      <div class="colo-12-xs col-5-md">
         <img src="" alt="">
       </div>
     </div>
