added base sass for why and lesson sections

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </ul>
     </div>
   </nav>
+
   <!-- intro -->
   <div class="container pt-5 pb-5">
     <div class="row justify-center">
@@ -35,38 +36,66 @@
     </div>
   </div>
 
-  <!-- about section -->
-  <section id="About" class="">
-    <h2 >What You’ll Learn</h2>
-    <div class="">
-      <div class="">
-        📈<h3>Stocks 101</h3>
-        <p>Bite-sized lessons, built for brains that scroll fast.</p>
-      </div>
-      <div class="">
-        🔍<h3>What’s a Trend?</h3>
-        <p>Bite-sized lessons, built for brains that scroll fast.</p>
-      </div>
-      <div class="">
-        💼<h3>Your First Portfolio</h3>
-        <p>Bite-sized lessons, built for brains that scroll fast.</p>
-      </div>
-    </div>
-  </section>
-  <!-- why section -->
-  <section id="work" class="">
-    <section class="">
-      <h2 style="">Why Trendz?</h2>
-      <div class="why">
-        <img src="https://via.placeholder.com/300x200.png?text=Student+Illustration" alt="Student with Stocks" class="">
-        <ul class="">
-          <li class="">Built for you</li>
-          <li class="">Real-world investing made fun</li>
-          <li class="">No jargon, no pressure</li>
-          <li class="">Free to start</li>
-        </ul>
-      </div>
-    </section>
+	  <!-- why section -->
+		<section id="work" class="bg-gray-light-9 pt-4 pb-4">
+			<section class="container">
+				<h2 class="mb-2">Why Trendz?</h2>
+				<div class="why">
+					<img src="https://via.placeholder.com/300x200.png?text=Student+Illustration" alt="" class="">
+					<p>At Trendz, we’re building finance for the next generation. Our lessons make real-world investing fun and approachable. There’s no jargon, no pressure — just simple, scroll-friendly explanations that help you connect the dots.</p>
+						<p class="mt-1">Best of all, it’s free to start, so you can focus on learning without the barriers.</p>
+				</div>
+			</section>
+		</section>
+
+  <!-- lesson section -->
+  <section id="About" class="pt-4 pb-4">
+		<div class="container">
+			<h2 class="mb-2">What You’ll Learn</h2>
+			<div class="row gap-2">
+				<div class="col-12-xs col-6-md col-3-lg">
+					<div class="card p-0">
+						<h3 class="card-title m-1">Stocks 101 </h3>
+						<p class="m-1 text-gray-light-9">Bite-sized lessons on the basics of the stock market.</p>
+					</div>
+				</div>
+
+				<div class="col-12-xs col-6-md col-3-lg">
+					<div class="card p-0">
+						<h3 class="card-title m-1">What’s a Trend?</h3>
+						<p class="m-1 text-gray-light-9">Decode the moves behind market shifts.</p>
+					</div>
+				</div>
+
+				<div class="col-12-xs col-6-md col-3-lg">
+					<div class="card p-0">
+						<h3 class="card-title m-1">Money Mindset</h3>
+						<p class="m-1 text-gray-light-9">Build the habits and confidence to invest for the long term.</p>
+					</div>
+				</div>
+
+				<div class="col-12-xs col-6-md col-3-lg">
+					<div class="card p-0">
+						<h3 class="card-title m-1">Your First Portfolio</h3>
+						<p class="m-1 text-gray-light-9">Simple steps to start building your money journey.</p>
+					</div>
+				</div>
+
+				<div class="col-12-xs col-6-md col-3-lg">
+					<div class="card p-0">
+						<h3 class="card-title m-1">Risk & Reward</h3>
+						<p class="m-1 text-gray-light-9">Learn how to balance growth with smart risk-taking.</p>
+					</div>
+				</div>
+
+				<div class="col-12-xs col-6-md col-3-lg">
+					<div class="card p-0">
+						<h3 class="card-title m-1">Crypto & Beyond</h3>
+						<p class="m-1 text-gray-light-9">Explore how digital assets fit into tomorrow’s market.</p>
+					</div>
+				</div>
+			</div>
+		</div>
   </section>
   <!-- testimonial section -->
   <section>
@@ -82,6 +111,7 @@
       </div>
     </div>
   </section>
+
   <!-- access section -->
   <section>
     <h2 style="">📱 Learn Anywhere</h2>
@@ -92,6 +122,7 @@
       <button class="">Join the Beta</button>
     </div>
   </section>
+
   <!-- footer -->
   <footer class="">
     <h3>Get market drops in your inbox weekly.</h3>
